syntax = "proto3";

message EmailPb {
    string localPart = 1;
    string domain = 2;
}
